--- a/app/Resources/views/static/terms.html.twig
+++ b/app/Resources/views/static/terms.html.twig
@@ -13,12 +13,12 @@
                     </p>
                     <ul>
                         <li>
-                            Kompisbyrån skapar kontakt mellan nya Fikakompisar och Musikkompisar baserat på gemensamma intressen. 
+                            Kompisbyrån skapar kontakt mellan nya kompisar baserat på gemensamma intressen. 
                             Kompisbyrån ansvarar endast för att matcha ihop personer som har bott i Sverige under kortare tid med 
                             personer som har bott i Sverige länge.
                         </li>
                         <li>
-                            Alla över 18 år är välkomna!
+                            Alla över 18 år (myndiga) får delta.
                         </li>
                         <li>
                             Du betalar bara för din egen fika, att registrera sig är gratis.
@@ -29,8 +29,9 @@
                         <li>
                             När du har registrerat din ansökan lovar du att din information är korrekt och godkänner att informationen; 
                             behandlas enligt PUL och hamnar i Kompisbyråns register så att vi kan hitta en ny kompis till dig, 
-                            att din e-mail skickas till din nya kompis, och att vi bjuder in dig till Kompisbyråns aktiviteter såsom 
-                            event.
+                            att din e-mail skickas till din nya kompis, och att vi bjuder in dig till Kompisbyråns aktiviteter eller erbjudanden.
+                            Om du vill korrigera dina lämnade uppgifter som finns registrerade hos oss, vänligen logga in med 
+                            din e-mail och ditt lösenord och uppdatera din profil.
                         </li>    
                         <li>
                             Vår ambition är att hitta en ny kompis till dig inom 14 dagar, men det kan ta både kortare och längre tid 
@@ -55,7 +56,7 @@
                         </li>
                         <li>
                             Vi vill hela tiden bli bättre på vårt arbete. Därför skickar vi ett e-mail till dig efter att du har 
-                            träffat din nya kompis och frågar hur ert möte var.
+                            träffat din nya kompis för att fråga hur ert möte var.
                         </li>
                     </ul>
                     <p>Tack för att du accepterar Kompisbyråns villkor!</p>
