Decrease width on musikkompis

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -975,8 +975,9 @@ fotm textarea{
 
 .musikkompis .container {
     width: 80%;
+    max-width: 800px;
     margin-top: 50px;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
 }
 
 .musikkompis .container img {
@@ -2727,7 +2728,6 @@ div.ppt {
 
 .footer--music .footer-inner {
     padding: 40px 0;
-    margin: 80px 0;
 }
 
 .footer--music .footer-inner .container {
