--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -23,6 +23,12 @@
     <link href="/css/custom.css" rel="stylesheet">
 
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.1.1/gh-fork-ribbon.min.css" />
+    <!--[if lt IE 9]>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.1.1/gh-fork-ribbon.ie.min.css" />
+    <![endif]-->
+
     {% block stylesheets %}{% endblock %}
 </head>
 
@@ -164,6 +170,11 @@
 
 <!-- Footer End -->
 
+<div class="github-fork-ribbon-wrapper right-bottom">
+    <div class="github-fork-ribbon">
+        <a href="https://github.com/kompisbyran/Kompisbyran">Fork me on GitHub</a>
+    </div>
+</div>
 
 <script src="/js/jquery.js"></script>
 <!-- Bootstrap JS -->
