--- a/app/Resources/views/static/about.html.twig
+++ b/app/Resources/views/static/about.html.twig
@@ -31,6 +31,7 @@
                             Cecilia Holmgren, grundare
                             <a href="mailto:cecilia@kompisbyran.se ">cecilia@kompisbyran.se </a><br>
                             Mikael Öhrén, verksamhetsutvecklare <br>
+                            Jon Gotlin, medarbetare<br>
                             Noa Bachner, medarbetare <br>
                             Gabriella Hernqvist, medarbetare <br>
                             Stella Hernström, medarbetare<br>
