--- a/app/Resources/views/static/terms.html.twig
+++ b/app/Resources/views/static/terms.html.twig
@@ -42,7 +42,7 @@
                             När vi har tagit emot din ansökan, bekräftar vi detta genom att skicka ett e-mail till dig, oftast inom 48 timmar.
                         </li>
                         <li>
-                            Du bör skicka ett e-mail din nya fikakompis och bestämma när ni kan träffas inom 7 dagar.
+                            Du bör skicka ett e-mail till din nya fikakompis och bestämma när ni kan träffas inom 7 dagar.
                         </li>
                         <li>
                             En kompisfika sker en gång. Gillar ni varandra får ni gärna träffas igen själva. Vill du träffa en ny kompis, 
