--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -136,7 +136,7 @@
                 <div class="col-md-8 col-sm-10">
                     <div class="footer-widget">
                         <h4><i class="fa fa-users"></i> &nbsp; Om oss</h4>
-                        <p>Emma Hammar och Cecilia Holmgren startade Kompisbyrån i januari 2014. Kompisbyrån är en ideell 
+                        <p>Emma Hammar och Cecilia Holmgren startade Kompisbyrån 2014. Kompisbyrån är en ideell 
                             förening som vill göra det lätt för människor att träffas i vardagen. Genom att kompisfika  
                             skapas kontakt mellan personer som vill träna på att prata svenska och personer som har bott i  
                             Sverige länge. Hittills har tusentals människor från 79 länder träffats genom Kompisbyrån.
