Add link to 3 from musikkompis ingress

--- a/app/Resources/views/static/musicfriend.html.twig
+++ b/app/Resources/views/static/musicfriend.html.twig
@@ -9,7 +9,7 @@
                 {{ 'register.musicfriend.subheader'|trans }}
             </h1>
             <p class="lead text-center">
-                {{ 'register.musicfriend.ingress'|trans }}
+                {{ 'register.musicfriend.ingress'|trans | raw }}
             </p>
             <p>
                 {{ 'register.musicfriend.text'|trans }}
