--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -55,19 +55,19 @@
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="{{ path('homepage') }}">Hem</a></li>
-                    <li><a href="{{ path('how_it_works') }}">Bli Fikakompis</a></li>
-                    <li><a href="{{ path('musicfriend') }}">Bli Musikkompis</a></li>
-                    <li><a href="{{ path('work_with_us') }}">Stöd oss</a></li>
-                    <li><a href="{{ path('about') }}">Om oss</a></li>
+                    <li><a href="{{ path('homepage') }}">{{'menu.home'|trans}}</a></li>
+                    <li><a href="{{ path('how_it_works') }}">{{'menu.fikafriend'|trans}}</a></li>
+                    <li><a href="{{ path('musicfriend') }}">{{'menu.musicfriend'|trans}}</a></li>
+                    <li><a href="{{ path('work_with_us') }}">{{'menu.support'|trans}}</a></li>
+                    <li><a href="{{ path('about') }}">{{'menu.about'|trans}}</a></li>
                     {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                         <li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                                Min profil<span class="fa fa-angle-down"></span>
+                                {{'menu.profile'|trans}}<span class="fa fa-angle-down"></span>
                             </a>
                             <ul class="dropdown-menu" role="menu">
-                                <li><a href="{{ path('settings') }}">Inställningar</a></li>
-                                <li><a href="{{ path('fos_user_security_logout') }}">Logga ut</a></li>
+                                <li><a href="{{ path('settings') }}">{{'menu.settings'|trans}}</a></li>
+                                <li><a href="{{ path('fos_user_security_logout') }}">{{'menu.signout'|trans}}</a></li>
                             </ul>
                         <li>
 
@@ -86,8 +86,8 @@
                             <li>
                         {% endif %}
                     {% else %}
-                        {# <li><a href="{{ path('hwi_oauth_service_redirect', {'service': 'facebook'}) }}">Logga in med facebook</a></li> #}
-                        <li><a href="{{ path('fos_user_security_login') }}">Logga in</a></li>
+                        {# <li><a href="{{ path('hwi_oauth_service_redirect', {'service': 'facebook'}) }}">{{'menu.signin.fb'|trans}}</a></li> #}
+                        <li><a href="{{ path('fos_user_security_login') }}">{{'menu.signin'|trans}}</a></li>
                     {% endif %}
 
                 </ul>
@@ -135,7 +135,7 @@
 
                 <div class="col-md-8 col-sm-10">
                     <div class="footer-widget">
-                        <h4><i class="fa fa-users"></i> &nbsp; Om oss</h4>
+                        <h4><i class="fa fa-users"></i> &nbsp; {{'menu.about'|trans}}</h4>
                         <p>Emma Hammar och Cecilia Holmgren startade Kompisbyrån 2014. Kompisbyrån är en ideell 
                             förening som vill göra det lätt för människor att träffas i vardagen. Genom att kompisfika  
                             skapas kontakt mellan personer som vill träna på att prata svenska och personer som har bott i  
@@ -146,7 +146,7 @@
                 </div>
                 <div class="col-md-4 col-sm-5">
                     <div class="footer-widget">
-                        <h4><i class="fa fa-envelope"></i> &nbsp; Kontakta oss</h4>
+                        <h4><i class="fa fa-envelope"></i> &nbsp; {{'footer.contact'|trans}}</h4>
                         <p>
                             <span class="mute">E-mail</span>:
                             <a href="mailto:kontakt@kompisbyran.se">kontakt@kompisbyran.se</a><br />
