--- a/app/Resources/views/static/terms.html.twig
+++ b/app/Resources/views/static/terms.html.twig
@@ -45,8 +45,8 @@
                             Du bör skicka ett e-mail till din nya fikakompis och bestämma när ni kan träffas inom 7 dagar.
                         </li>
                         <li>
-                            En kompisfika sker en gång. Gillar ni varandra får ni gärna träffas igen själva. Vill du träffa en ny kompis, 
-                            loggar du in och anmäler dig igen.
+                            En kompisfika eller ett musikmöte sker en gång. Gillar ni varandra får ni gärna träffas igen själva. Vill du träffa en 
+                            ny Fikakompis eller Musikkompis, loggar du in och anmäler dig igen.
                         </li>
                         <li>    
                             Om du vill avregistrera dig, skicka ett e-mail till kontakt@kompisbyran.se.
