--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -88,7 +88,7 @@
                                 <ul class="dropdown-menu" role="menu">
                                     <li><a href="{{ path('admin_start') }}">Fikakompisar att matcha</a></li>
                                     <li><a href="{{ path('admin_start', {'type': 'musicfriend'}) }}">Musikkompisar att matcha</a></li>
-                                    <li><a href="{{ path('admin_connections') }}">Matchade fikakompisar</a></li>
+                                    <li><a href="{{ path('admin_connections') }}">Matchade kompisar</a></li>
                                     <li><a href="{{ path('admin_users') }}">Användare</a></li>
                                 </ul>
                             <li>
@@ -150,6 +150,7 @@
                             Sverige länge. Hittills har tusentals människor från 79 länder träffats genom Kompisbyrån.
                             </p>
                             <p>Läs igenom våra <a href="{{ path('terms') }}">villkor</a> innan du anmäler dig till en fika.</p>
+                            <p>Vill du ge fler möjlighet att träffa nya Fikakompisar? Stöd Kompisbyrån med ett bidrag på valfri summa: BG 386-3982</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-5">
