--- a/app/Resources/views/static/workWithUs.html.twig
+++ b/app/Resources/views/static/workWithUs.html.twig
@@ -14,7 +14,13 @@
                     människor att få ett socialt sammanhang i samhället? På Kompisbyrån jobbar vi aktivt för att skapa nya 
                     kontaktytor mellan nya och etablerade svenskar och ge fler chansen att öva svenska i vardagen. Då blir det 
                     mycket lättare att komma in på arbetsmarknaden, få en egen bostad och hitta nya kompisar. Stöd oss till ett 
-                    öppnare samhälle där alla kan känna sig delaktiga och välkomna. Maila <a href="mailto:kontakt@kompisbyran.se">kontakt@kompisbyran.se</a> 
+                    öppnare samhälle där alla kan känna sig delaktiga och välkomna. 
+                </p>
+                <p> 
+                    <strong>Ge ett bidrag på valfri summa: BG 386-3982</strong>
+                </p>
+                <p> 
+                    Du får också gärna maila <a href="mailto:kontakt@kompisbyran.se">kontakt@kompisbyran.se</a> 
                     så berättar vi mer om hur du kan stötta vår verksamhet.
                 </p>
 
