--- a/app/Resources/views/email/connectionCreated.txt.twig
+++ b/app/Resources/views/email/connectionCreated.txt.twig
@@ -15,10 +15,10 @@ Maila din {{ connection.musicFriend ? 'Musikkompis' : 'Fikakompis' }} som har e-
 skicka mailet inom en vecka. Vi rekommenderar att ni ses på ett kafé i ungefär en timme. Vi har också 
 skickat din e-mail till din {{ connection.musicFriend ? 'Musikkompis' : 'Fikakompis' }}.
 
-Skicka gärna ett foto från er fika och berätta om hur du tyckte att det var. Vi vill gärna dela det för att uppmuntra fler till att vara med
+Skicka gärna ett foto från ert möte och berätta om hur du tyckte att det var. Vi vill gärna dela det för att uppmuntra fler till att vara med
 och få information om Kompisbyrån.
 
-Hör av dig om du har några frågor! Vi önskar er en trevlig fika!
+Hör av dig om du har några frågor! Vi önskar er ett trevligt möte!
 
 Bästa hälsningar
 Vännerna på Kompisbyrån
