--- a/app/Resources/views/email/connectionCreated.html.twig
+++ b/app/Resources/views/email/connectionCreated.html.twig
@@ -21,11 +21,11 @@
     din e-mail till din {{ connection.musicFriend ? 'Musikkompis' : 'Fikakompis' }}.</p>
 
     <p>
-        Skicka gärna ett foto från er fika och berätta om hur du tycker att det var. Vi vill gärna dela med oss av det för att
+        Skicka gärna ett foto från ert möte och berätta om hur du tycker att det var. Vi vill gärna dela med oss av det för att
         uppmuntra fler till att vara med och få information om Kompisbyrån.
     </p>
 
-    <p>Om du har frågor, kontakta oss! Vi önskar er en trevlig fika!</p>
+    <p>Om du har frågor, kontakta oss! Vi önskar er ett trevligt möte!</p>
 
     <p>
         Bästa hälsningar<br>
