Move Musikkompis info to footer

--- a/app/Resources/views/static/musicfriend.html.twig
+++ b/app/Resources/views/static/musicfriend.html.twig
@@ -60,16 +60,7 @@ Vi vet att musik är en stark förenande kraft. Därför startar vi nu Musikkomp
             
             <div class="col-sm-6 col-xs-12">
                 <div class="footer-widget">
-                    <h4>Kontakta oss</h4>
-                    <p>
-                        <span class="mute">E-mail</span>:
-                        <a href="mailto:kontakt@kompisbyran.se">kontakt@kompisbyran.se</a><br />
-                    </p>
-                    <div class="social">
-                        <a href="https://www.facebook.com/kompisbyran" class="facebook"><i class="fa fa-facebook"></i></a>
-                        <a href="https://www.twitter.com/kompisbyran" class="twitter"><i class="fa fa-twitter"></i></a>
-                        <a href="https://www.instagram.com/kompisbyran" class="instagram"><i class="fa fa-instagram"></i></a>
-                    </div>
+                    <p> {{ 'register.musicfriend.text'|trans }} </p>
                 </div>
             </div>
 
