--- a/web/css/style.css
+++ b/web/css/style.css
@@ -978,7 +978,7 @@ fotm textarea{
 /* Musikkompis */
 
 .musikkompis .container {
-    width: 80%;
+    width: 100%;
     max-width: 800px;
     margin-top: 50px;
     margin-bottom: 20px;
@@ -1001,6 +1001,7 @@ fotm textarea{
 }
 
 .musikkompis a.btn{
+    width: 40%;
     margin-top: 25px;
     padding: 16px;
     font-size: 14px;
@@ -1015,6 +1016,28 @@ fotm textarea{
 .musikkompis a.btn:hover {
     background-color: #fff;
     color: #F7931D;
+}
+
+.musikkompis .video {
+    margin: 60px 0;
+}
+
+.musikkompis .video__box--media {
+    position: relative;
+    padding-bottom: 56.25%; /* 16/9 ratio */
+    padding-top: 30px; /* IE6 workaround*/
+    height: 0;
+    overflow: hidden;    
+}
+
+.musikkompis .video__box iframe,
+.musikkompis .video__box object,
+.musikkompis .video__box embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 /* Recent Post */
@@ -2798,6 +2821,10 @@ div.ppt {
         display: none;
     }
 
+    .musikkompis .container .btn{
+        width: 50%;
+    }
+
     .footer--music .footer-logos {
         width: auto;
         margin: 20px 0 20px 20%;
@@ -3032,6 +3059,10 @@ div.ppt {
         margin-top: 20px;
     }
 
+    .musikkompis .container .btn{
+        width: 90%;
+    }
+
     /* Footer Responsive CSS */
 
     .footer .footer-inner{
@@ -3128,5 +3159,20 @@ div.ppt {
 
     .musikkompis .container a.btn {
         width: 100%;
+    }
+
+    .musikkompis .container {
+        width: 100%;
+        margin-top: 10px;
+    }
+
+    .musikkompis .container h1{
+        width: 90%;
+        margin: 10px auto;
+    }
+
+    .musikkompis .container .lead{
+        width: 90%;
+        margin: 0 auto;
     }
 }
