Add musikkompis video header

--- a/app/Resources/views/static/musicfriend.html.twig
+++ b/app/Resources/views/static/musicfriend.html.twig
@@ -29,6 +29,9 @@ Vi vet att musik är en stark förenande kraft. Därför startar vi nu Musikkomp
             </div>
 
             <div class="video row">
+                <div class="video__header col-12"> 
+                    <p class="lead"> {{ 'register.musicfriend.videoheader'|trans }}</p>
+                </div>
                 <div class="video__box col-sm-12 col-md-6">
                     <div class="video__box--media">
                         <iframe src="https://www.youtube.com/embed/XkjXZu2jdWo" frameborder="0" allowfullscreen></iframe>
