--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1018,8 +1018,17 @@ fotm textarea{
     color: #F7931D;
 }
 
+.musikkompis .video__header {
+    text-align: center;
+}
+
+.musikkompis .video__header .lead{
+    border: none;
+    padding-bottom: 0;
+}
+
 .musikkompis .video {
-    margin: 60px 0;
+    margin: 40px 0;
 }
 
 .musikkompis .video__box--media {
@@ -1038,6 +1047,10 @@ fotm textarea{
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+.musikkompis .video__box--text {
+    margin-top: 20px;
 }
 
 /* Recent Post */
@@ -3174,5 +3187,9 @@ div.ppt {
     .musikkompis .container .lead{
         width: 90%;
         margin: 0 auto;
+    }
+
+    .musikkompis .container .video__box {
+        margin-top: 20px;
     }
 }
