--- a/app/Resources/views/static/musicfriend.html.twig
+++ b/app/Resources/views/static/musicfriend.html.twig
@@ -61,13 +61,14 @@ Vi vet att musik är en stark förenande kraft. Därför startar vi nu Musikkomp
         <div class="container">
             <div class="row">
             
-            <div class="col-sm-6 col-xs-12">
+            <div class="col-sm-8 col-xs-12">
                 <div class="footer-widget">
-                    <p> {{ 'register.musicfriend.text'|trans }} </p>
+                    <h4> {{ 'register.musicfriend.footer.header'|trans }} </h4>
+                    <p> {{ 'register.musicfriend.footer.text'|trans }} </p>
                 </div>
             </div>
 
-            <div class="col-sm-6 col-xs-12">
+            <div class="col-sm-4 col-xs-12">
                 <div class="footer-logos">
                     <img src="/images/KB-logo.gif" class="img-responsive kb-logo" alt="" />
                     <a href="//tre.se/musikkompis"><img src="/images/neverstopsharing.png" class="img-responsive" alt="" /></a>
