--- a/app/Resources/views/static/terms.html.twig
+++ b/app/Resources/views/static/terms.html.twig
@@ -27,11 +27,11 @@
                             Kompisbyrån rekommenderar att ni träffas ungefär 1 timme på ett offentligt ställe i stadens centrala del.
                         </li>
                         <li>
-                            När du har registrerat din ansökan lovar du att din information är korrekt och godkänner att informationen; 
-                            behandlas enligt PUL och hamnar i Kompisbyråns register så att vi kan hitta en ny kompis till dig, 
-                            att din e-mail skickas till din nya kompis, och att vi bjuder in dig till Kompisbyråns aktiviteter eller erbjudanden.
-                            Om du vill korrigera dina lämnade uppgifter som finns registrerade hos oss, vänligen logga in med 
-                            din e-mail och ditt lösenord och uppdatera din profil.
+                            När du har registrerat din ansökan garanterar du att din information är korrekt och godkänner att 
+                            informationen; kan komma att behandlas enligt PUL och hamnar i Kompisbyråns register så att vi kan 
+                            hitta nya kompisar till dig, att din information och e-mail skickas till din nya kompis, och att vi 
+                            bjuder in dig till Kompisbyråns aktiviteter eller erbjudanden. Om du vill korrigera dina lämnade uppgifter 
+                            som finns registrerade hos oss, vänligen logga in med din e-mail och ditt lösenord och uppdatera din profil.
                         </li>    
                         <li>
                             Vår ambition är att hitta en ny kompis till dig inom 14 dagar, men det kan ta både kortare och längre tid 
