--- a/app/Resources/views/static/terms.html.twig
+++ b/app/Resources/views/static/terms.html.twig
@@ -7,59 +7,10 @@
             <div class="row">
             <div class="col-md-2 col-sm-0"></div>
                 <div class="col-md-8 col-sm-12">
-                    <h2><strong>Villkor</strong></h2>
-                    <p>
-                        Kompisbyrån förmedlar kontakten mellan personer som är nya i Sverige med personer som har bott i Sverige länge. 
-                    </p>
-                    <ul>
-                        <li>
-                            Kompisbyrån skapar kontakt mellan nya kompisar baserat på gemensamma intressen. 
-                            Kompisbyrån ansvarar endast för att matcha ihop personer som har bott i Sverige under kortare tid med 
-                            personer som har bott i Sverige länge.
-                        </li>
-                        <li>
-                            Alla över 18 år (myndiga) får delta.
-                        </li>
-                        <li>
-                            Du betalar bara för din egen fika, att registrera sig är gratis.
-                        </li>
-                        <li>
-                            Kompisbyrån rekommenderar att ni träffas ungefär 1 timme på ett offentligt ställe i stadens centrala del.
-                        </li>
-                        <li>
-                            När du har registrerat din ansökan garanterar du att din information är korrekt och godkänner att 
-                            informationen; kan komma att behandlas enligt PUL och hamnar i Kompisbyråns register så att vi kan 
-                            hitta nya kompisar till dig, att din information och e-mail skickas till din nya kompis, och att vi 
-                            bjuder in dig till Kompisbyråns aktiviteter eller erbjudanden. Om du vill korrigera dina lämnade uppgifter 
-                            som finns registrerade hos oss, vänligen logga in med din e-mail och ditt lösenord och uppdatera din profil.
-                        </li>    
-                        <li>
-                            Vår ambition är att hitta en ny kompis till dig inom 14 dagar, men det kan ta både kortare och längre tid 
-                            beroende på din profil och hur många personer som också vill träffa nya kompisar. Det innebär att du kan 
-                            få vänta.
-                        </li>
-                        <li>
-                            När vi har tagit emot din ansökan, bekräftar vi detta genom att skicka ett e-mail till dig, oftast inom 48 timmar.
-                        </li>
-                        <li>
-                            Du bör skicka ett e-mail till din nya fikakompis och bestämma när ni kan träffas inom 7 dagar.
-                        </li>
-                        <li>
-                            En kompisfika eller ett musikmöte sker en gång. Gillar ni varandra får ni gärna träffas igen själva. Vill du träffa en 
-                            ny Fikakompis eller Musikkompis, loggar du in och anmäler dig igen.
-                        </li>
-                        <li>    
-                            Om du vill avregistrera dig, skicka ett e-mail till kontakt@kompisbyran.se.
-                        </li>
-                        <li>
-                            Kompisbyrån kan inte garantera att vi hittar en ny kompis till dig men vi gör alltid vårt bästa.
-                        </li>
-                        <li>
-                            Vi vill hela tiden bli bättre på vårt arbete. Därför skickar vi ett e-mail till dig efter att du har 
-                            träffat din nya kompis för att fråga hur ert möte var.
-                        </li>
-                    </ul>
-                    <p>Tack för att du accepterar Kompisbyråns villkor!</p>
+                    <h2>{{ 'terms.header'|trans }}</h2>
+                    <p> {{ 'terms.ingress'|trans }}</p>
+                    {{ 'terms.list'|trans | raw }}
+                    <p>{{ 'terms.outro'|trans }}</p>
                 </div>
             </div>
         </div>
