Update both html and txt version with text for musikkompis

--- a/app/Resources/views/email/connectionCreated.txt.twig
+++ b/app/Resources/views/email/connectionCreated.txt.twig
@@ -12,13 +12,13 @@ Vi har nu hittat en {{ connection.musicFriend ? 'Musikkompis' : 'Fikakompis' }} 
 {%- endfor %}.
 
 Maila din {{ connection.musicFriend ? 'Musikkompis' : 'Fikakompis' }} som har e-mail: {{ partner.email }}. Bestäm var och när ni ska träffas,
-skicka mailet inom en vecka. Vi rekommenderar att ni ses på ett kafé i ungefär en timme. Vi har också 
+skicka mailet inom en vecka. Vi rekommenderar att ni ses på ett offentlig plats i ungefär en timme. Vi har också 
 skickat din e-mail till din {{ connection.musicFriend ? 'Musikkompis' : 'Fikakompis' }}.
 
-Skicka gärna ett foto från ert möte och berätta om hur du tyckte att det var. Vi vill gärna dela det för att uppmuntra fler till att vara med
+Skicka gärna ett foto från {{ connection.musicFriend ? 'ert musikmöte' : 'er fika' }} och berätta om hur du tyckte att det var. Vi vill gärna dela det för att uppmuntra fler till att vara med
 och få information om Kompisbyrån.
 
-Hör av dig om du har några frågor! Vi önskar er ett trevligt möte!
+Hör av dig om du har några frågor! Vi önskar er {{ connection.musicFriend ? 'ett trevligt musikmöte!' : 'en trevlig fika!' }}
 
 Bästa hälsningar
 Vännerna på Kompisbyrån
