Correct grammar error

--- a/app/Resources/views/email/connectionCreated.html.twig
+++ b/app/Resources/views/email/connectionCreated.html.twig
@@ -17,7 +17,7 @@
         {%- endfor %}.</p>
 
     <p>Maila din {{ connection.musicFriend ? 'Musikkompis' : 'Fikakompis' }} som har e-mail: {{ partner.email }}. Bestäm var och när ni ska träffas,
-    skicka mailet inom en vecka. Vi rekommenderar att ni ses på ett offentlig plats i ungefär en timme. Vi har också skickat 
+    skicka mailet inom en vecka. Vi rekommenderar att ni ses på en offentlig plats i ungefär en timme. Vi har också skickat 
     din e-mail till din {{ connection.musicFriend ? 'Musikkompis' : 'Fikakompis' }}.</p>
 
     <p>
