--- a/app/Resources/views/static/musicfriend.html.twig
+++ b/app/Resources/views/static/musicfriend.html.twig
@@ -34,7 +34,7 @@ Vi vet att musik är en stark förenande kraft. Därför startar vi nu Musikkomp
                 </div>
                 <div class="video__box col-sm-12 col-md-6">
                     <div class="video__box--media">
-                        <iframe src="https://www.youtube.com/embed/XkjXZu2jdWo" frameborder="0" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/pmsbyZqwiLM" frameborder="0" allowfullscreen></iframe>
                     </div>
                     <p class="video__box--text">
                         {{ 'register.musicfriend.video1'|trans }}
