Add place holder for 3rd music video

--- a/app/Resources/views/static/musicfriend.html.twig
+++ b/app/Resources/views/static/musicfriend.html.twig
@@ -32,7 +32,7 @@ Vi vet att musik är en stark förenande kraft. Därför startar vi nu Musikkomp
                 <div class="video__header col-12"> 
                     <p class="lead"> {{ 'register.musicfriend.videoheader'|trans }}</p>
                 </div>
-                <div class="video__box col-sm-12 col-md-6">
+                <div class="video__box col-sm-12 col-md-4">
                     <div class="video__box--media">
                         <iframe src="https://www.youtube.com/embed/pmsbyZqwiLM" frameborder="0" allowfullscreen></iframe>
                     </div>
@@ -40,7 +40,15 @@ Vi vet att musik är en stark förenande kraft. Därför startar vi nu Musikkomp
                         {{ 'register.musicfriend.video1'|trans }}
                     </p>
                 </div>
-                <div class="video__box col-sm-12 col-md-6">
+                <div class="video__box col-sm-12 col-md-4">
+                    <div class="video__box--media">
+                        <iframe src="https://www.youtube.com/embed/pmsbyZqwiLM" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                    <p class="video__box--text">
+                        {{ 'register.musicfriend.video1'|trans }}
+                    </p>
+                </div>
+                <div class="video__box col-sm-12 col-md-4">
                     <div class="video__box--media">
                         <iframe src="https://www.youtube.com/embed/HX9fMo8crg4" frameborder="0" allowfullscreen></iframe>
                     </div>
