Increase padding around text in music footer

--- a/app/Resources/views/static/musicfriend.html.twig
+++ b/app/Resources/views/static/musicfriend.html.twig
@@ -69,7 +69,7 @@ Vi vet att musik är en stark förenande kraft. Därför startar vi nu Musikkomp
         <div class="container">
             <div class="row">
             
-            <div class="col-sm-8 col-xs-12">
+            <div class="col-sm-8 col-xs-12 footer-text-wrapper">
                 <div class="footer-widget">
                     <h4> {{ 'register.musicfriend.footer.header'|trans }} </h4>
                     <p> {{ 'register.musicfriend.footer.text'|trans }} </p>
