--- a/app/Resources/views/static/about.html.twig
+++ b/app/Resources/views/static/about.html.twig
@@ -14,6 +14,8 @@
                         men med liknande intressen. De träffas över en fika, en kompisfika. Idag har tusentals 
                         fikakompisar lärt känna varandra över en kompisfika. Flera fikor har lett till jobb, 
                         många har lett till vänskap. Kompisbyrån är partipolitiskt och religiöst obunden.
+                        Vi länkar samman nya kompisar som kan träffas i Göteborg, Jönköping, Linköping, Malmö, 
+                        Stockholm, Umeå, Uppsala, Västerås eller Örebro.
                     </p>
                     <h3>Varför kompisfika?</h3>
                     <p>
