Adding statistics for admins

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -101,6 +101,7 @@
                                     <li><a href="{{ path('admin_start', {'type': 'musicfriend'}) }}">Musikkompisar att matcha</a></li>
                                     <li><a href="{{ path('admin_connections') }}">Matchade kompisar</a></li>
                                     <li><a href="{{ path('admin_users') }}">Användare</a></li>
+                                    <li><a href="{{ path('admin_statistics') }}">Statistik</a></li>
                                 </ul>
                             <li>
                         {% endif %}
@@ -155,9 +156,9 @@
                 <div class="col-md-8 col-sm-10">
                     <div class="footer-widget">
                         <h4><i class="fa fa-users"></i> &nbsp; {{'menu.about'|trans}}</h4>
-                        <p>Emma Hammar och Cecilia Holmgren startade Kompisbyrån 2014. Kompisbyrån är en ideell 
-                            förening som vill göra det lätt för människor att träffas i vardagen. Genom att kompisfika  
-                            skapas kontakt mellan personer som vill träna på att prata svenska och personer som har bott i  
+                        <p>Emma Hammar och Cecilia Holmgren startade Kompisbyrån 2014. Kompisbyrån är en ideell
+                            förening som vill göra det lätt för människor att träffas i vardagen. Genom att kompisfika
+                            skapas kontakt mellan personer som vill träna på att prata svenska och personer som har bott i
                             Sverige länge. Hittills har tusentals människor från 79 länder träffats genom Kompisbyrån.
                             </p>
                             <p>Läs igenom våra <a href="{{ path('terms') }}">villkor</a> innan du anmäler dig till en fika.</p>
