--- a/app/Resources/views/admin/statistics/index.html.twig
+++ b/app/Resources/views/admin/statistics/index.html.twig
@@ -35,7 +35,7 @@
                     </div>
                     <div class="col-sm-3">
                         <div class="form-group">
-                            <button type="submit" class="btn btn-default">Sök</button>
+                            <button type="submit" class="btn btn-default">Visa</button>
                         </div>
                     </div>
                 </form>
