--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -211,6 +211,9 @@
 <!-- Custom JS -->
 <script type="text/javascript" src="/js/custom.js"></script>
 
+<script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
+<script src="{{ path('fos_js_routing_js', {'callback': 'fos.Router.setData'}) }}"></script>
+
         {% block javascripts %}{% endblock %}
 <script>
     $(function () {
